Fixing b-menu on iphone 8

--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -124,38 +124,44 @@
             }
 
             .icon {
-                position: relative;
-                top: -.5rem;
+              position: relative;
+              bottom: .5rem;
+              width: 2rem;
+              height: 1.5rem; 
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              display: block;
 
-                &,
-                &::before,
-                &::after {
-                    width: 100%;
-                    height: .2rem;
-                    background-color: #1D3557;
-                    display: inline-block;
-                }
+              &,
+              &::before,
+              &::after {
+                  width: 100%;
+                  height: .2rem;
+                  background-color: #1D3557;
+                  display: inline-block;
+              }
 
-                &::before,
-                &::after {
-                    content: "";
-                    position: absolute;
-                    left: 0;
-                    transition: all .2s;
-                }
+              &::before,
+              &::after {
+                  content: "";
+                  position: absolute;
+                  left: 0;
+                  transition: all .2s;
+              }
 
-                &::before {
-                    top: -1rem;
-                }
+              &::before {
+                  top: -1rem;
+              }
 
-                &::after {
-                    top: 1rem;
-                }
+              &::after {
+                  top: 1rem;
+              }
 
-                &:hover &::before {
-                    top: -1rem;
-                }
-            }
+              &:hover &::before {
+                  top: -1rem;
+              }
+          }
 
             @include respond(phone) {
                 width: 5rem;
